Exercice 3 : Récupération des cinémas + affichage dans un table html + refactorisation en module

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 
 <body>
 
+    <h1>Projet JS avancé - Manipulation d'api</h1>
+
+    <div class="exercice-1">
+        <h2>Liste des cinémas</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Adresse</th>
+                    <th>Commune</th>
+                    <th>Nombre de sièges</th>
+                </tr>
+            </thead>
+            <tbody id="container-cinema-list"></tbody>
+        </table>
+    </div>
 
     <script type="module" src="./js/main.js"></script>
 </body>
