Exercice 3 : Tri des cinéma par nombre de fauteuil + affichage dans table

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>Projet JS avancé - Manipulation d'api</h1>
 
-    <div class="exercice-1">
+    <div>
         <h2>Liste des cinémas</h2>
         <table>
             <thead>
@@ -23,6 +23,19 @@
                 </tr>
             </thead>
             <tbody id="container-cinema-list"></tbody>
+        </table>
+
+        <h2>Liste des cinémas ORDER_BY fauteuils</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Adresse</th>
+                    <th>Commune</th>
+                    <th>Nombre de sièges</th>
+                </tr>
+            </thead>
+            <tbody id="container-cinema-ordered-list"></tbody>
         </table>
     </div>
 
