Ajout du style + amélioration visuelle rapide

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet JS avancé - Manipulation API</title>
+
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -54,7 +56,7 @@
                     <th>Nombre de sièges</th>
                     <th>Latitude</th>
                     <th>Longitude</th>
-                    <th>Distance</th>
+                    <th>Distance (km)</th>
                 </tr>
             </thead>
             <tbody id="container-cinema-coord-list"></tbody>
